@@ -1,3 +1,11 @@
+2006-01-01  0.9.42 Roland Clobus <rclobus@bigfoot.com>
+	* client/gtk/callbacks.c, client/gtk/frontend.h, client/gtk/gui.c,
+	client/gtk/gui.h, client/gtk/histogram.c, client/gtk/histogram.h,
+	client/gtk/legend.c, client/gtk/offline.c, client/gtk/settingscreen.c,
+	client/gtk/trade.c, common/gtk/theme.c, common/gtk/theme.h: Update all
+	images when the theme changes. Update the rules in the legend when a
+	new game is started.
+
 2005-12-30  Brian Wellington <bwelling@xbill.org>
 	* Add theme based on Battle of Wesnoth artwork (patch from Phil Ezolt).
 
